--- a/package.json
+++ b/package.json
@@ -3,10 +3,19 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "node server.js",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "ng test",
+"heroku-prebuild": "",
+  "heroku-postbuild": "ng build --prod"
+  },
+ "engines": {
+
+    "node": "14.17.1",
+
+    "npm": "6.14.13"
+
   },
   "private": true,
   "dependencies": {
