--- a/package.json
+++ b/package.json
@@ -3,12 +3,11 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "node server.js",
-    "build": "ng build",
+    "start": "node app.js",
+    "build": "ng build --prod",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test",
-"heroku-prebuild": "",
-  "heroku-postbuild": "ng build --prod"
+    "test": "ng test"
+
   },
  "engines": {
 
