--- a/package.json
+++ b/package.json
@@ -28,7 +28,11 @@
     "@angular/router": "~12.2.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.3.0",
-    "zone.js": "~0.11.4"
+    "zone.js": "~0.11.4",
+ "cors": "^2.8.5",
+    "express": "^4.17.1",
+    "mongodb": "^4.1.3",
+    "nodemon": "^2.0.14"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~12.2.5",
