--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "ng": "ng",
     "start": "node app.js",
-    "build": "ng build --prod",
+    "build": "ng build --prod --baseHref=\"./\"",
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
 
